# Zavrsni

./: .gitignore  CMakeLists.txt  LICENSE
assets/shaders/: fragment.glsl
include/: camera.h  mesh.h  model.h  shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
